--- a/config/rollow.conf
+++ b/config/rollow.conf
@@ -1,5 +1,11 @@
-# Uncomment the following line to enable the OLED Display
+#In general, items listed here are different from their default values
+
+#display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+
+#power management
+CONFIG_ZMK_SLEEP=y
 
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
