--- a/config/boards/shields/rollow/rollow.dtsi
+++ b/config/boards/shields/rollow/rollow.dtsi
@@ -64,7 +64,7 @@ RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10
 		debounce-release-ms = <5>;
 		debounce-scan-period-ms = <1>;
 		diode-direction = "col2row";
-		poll-period-ms = <10>
+		poll-period-ms = <10>;
 	};
 
 	left_encoder: encoder_left {
