--- a/config/rollow.conf
+++ b/config/rollow.conf
@@ -152,8 +152,8 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_MOUSE=y #custom
 CONFIG_ZMK_MOUSE_TICK_DURATION=8
 
-CONFIG_ZMK_MOUSE_WORK_QUEUE_SYSTEM=y
-#ZMK_MOUSE_WORK_QUEUE_DEDICATED=n
+#CONFIG_ZMK_MOUSE_WORK_QUEUE_SYSTEM=y
+CONFIG ZMK_MOUSE_WORK_QUEUE_DEDICATED=y
 
 CONFIG_ZMK_MOUSE_DEDICATED_THREAD_STACK_SIZE=2048
 CONFIG_ZMK_MOUSE_DEDICATED_THREAD_PRIORITY=3
