--- a/config/west.yml
+++ b/config/west.yml
@@ -1,7 +1,7 @@
 manifest:
   remotes:
-    - name: zmkfirmware
-      url-base: https://github.com/zmkfirmware
+    #- name: zmkfirmware
+    #  url-base: https://github.com/zmkfirmware
     #- name: barbellboards
     #  url-base: https://github.com/barbellboards
     #- name: infused-kim
