--- a/config/rollow.conf
+++ b/config/rollow.conf
@@ -1,160 +1,33 @@
-#these are all the Standard ZMK configuration options. Custom configuration will be marked
+# the below is custom configuration. Otherwise we will use the defaults
 
-#backlight
-CONFIG_ZMK_BACKLIGHT=n
-CONFIG_ZMK_BACKLIGHT_BRT_STEP=20
-CONFIG_ZMK_BACKLIGHT_BRT_START=40
-CONFIG_ZMK_BACKLIGHT_ON_START=y
-CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=n
-CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=n
-#end backlight
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y #normally use CONFIG_ZMK_DISPLAY_WORK_QUEUE_SYSTEM
 
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
-#behaviors
-CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=64
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0 #normally use the default of -1
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5 #normally use the default of -m
 
-CONFIG_ZMK_MACRO_DEFAULT_WAIT_MS=15
-CONFIG_ZMK_MACRO_DEFAULT_TAP_MS=30
-#end behaviors
-
-
-#combos
-CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=4
-CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=5
-CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=4
-#end combos
-
-
-#display
-CONFIG_ZMK_DISPLAY=y #custom
-CONFIG_ZMK_WIDGET_LAYER_STATUS=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y #custom
-CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
-CONFIG_ZMK_WIDGET_WPM_STATUS=n
-
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y #custom
-#CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=n
-
-CONFIG_ZMK_DISPLAY_WORK_QUEUE_SYSTEM=y #custom
-#CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=n
-
-CONFIG_ZMK_DISPLAY_DEDICATED_THREAD_STACK_SIZE=2048
-CONFIG_ZMK_DISPLAY_DEDICATED_THREAD_PRIORITY=5
-#end display
-
-
-#encoder
-CONFIG_EC11=y #custom
-CONFIG_EC11_THREAD_PRIORITY=10
-CONFIG_EC11_THREAD_STACK_SIZE=1024
-
-#CONFIG_EC11_TRIGGER_NONE=n
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y #custom
-#CONFIG_EC11_TRIGGER_OWN_THREAD=n
-#end encoder
-
-
-#keyboard scan
-CONFIG_ZMK_KSCAN_EVENT_QUEUE_SIZE=4
-CONFIG_ZMK_KSCAN_INIT_PRIORITY=40
-CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=-1
-CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=-1
-
-CONFIG_ZMK_KSCAN_DIRECT_POLLING=n
-
-CONFIG_ZMK_KSCAN_MATRIX_POLLING=y #custom
-CONFIG_ZMK_KSCAN_MATRIX_WAIT_BEFORE_INPUTS=0
-CONFIG_ZMK_KSCAN_MATRIX_WAIT_BETWEEN_OUTPUTS=0
-#end Keyboard scan
-
-
-#power management
-CONFIG_ZMK_IDLE_TIMEOUT=30000
-CONFIG_ZMK_SLEEP=y #custom
+CONFIG_ZMK_IDLE_TIMEOUT=10000
+CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 CONFIG_ZMK_EXT_POWER=y
-#end power management
 
+CONFIG_ZMK_SETTINGS_SAVE_DEBOUNCE=5000 #normally use 60000
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y #normally use the below
 
-#RGB Underglow
-CONFIG_ZMK_RGB_UNDERGLOW=n
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=n
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=n
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=10
-CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=10
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=10
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=0
-CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=100
-CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=3
-CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=0
-CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
-#End RGB Underglow
+#CONFIG_ZMK_HID_REPORT_TYPE_HKRO=y
+#CONFIG_ZMK_HID_KEYBOARD_REPORT_SIZE=10
 
-
-#System Configurqation
-CONFIG_ZMK_KEYBOARD_NAME="t4corollow" #custom
-CONFIG_ZMK_SETTINGS_SAVE_DEBOUNCE=60000
-CONFIG_ZMK_WPM=n
-CONFIG_HEAP_MEM_POOL_SIZE=8192
-CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
-
-CONFIG_ZMK_HID_CONSUMER_REPORT_SIZE=6
-CONFIG_ZMK_HID_REPORT_TYPE_HKRO=y
-#CONFIG_ZMK_HID_REPORT_TYPE_NKRO=n
-CONFIG_ZMK_HID_KEYBOARD_REPORT_SIZE=10
-
-CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_FULL=y
-#CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=n
-
-#CONFIG_USB
-CONFIG_USB_DEVICE_VID=0x1D50
-CONFIG_USB_DEVICE_PID=0x615E
-CONFIG_USB_DEVICE_MANUFACTURER="Barbellboards"
 CONFIG_USB_HID_POLL_INTERVAL_MS=1
-#CONFIG_ZMK_USB
-CONFIG_ZMK_USB_INIT_PRIORITY=50
-#--
-#CONFIG_BT
-CONFIG_BT_MAX_CONN=5
-CONFIG_BT_MAX_PAIRED=5
-#CONFIG_ZMK_BLE
-CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=n
-CONFIG_ZMK_BLE_CONSUMER_REPORT_QUEUE_SIZE=5
-CONFIG_ZMK_BLE_KEYBOARD_REPORT_QUEUE_SIZE=20
-CONFIG_ZMK_BLE_INIT_PRIORITY=50
-CONFIG_ZMK_BLE_THREAD_PRIORITY=5
-CONFIG_ZMK_BLE_THREAD_STACK_SIZE=512
-CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
 
-CONFIG_ZMK_USB_LOGGING=n
-CONFIG_ZMK_LOG_LEVEL=4
-
-CONFIG_ZMK_SPLIT=y
-CONFIG_ZMK_SPLIT_BLE=y
-#CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_POSITION_QUEUE_SIZE=5
-CONFIG_ZMK_BLE_SPLIT_CENTRAL_SPLIT_RUN_STACK_SIZE=512
-CONFIG_ZMK_BLE_SPLIT_CENTRAL_SPLIT_RUN_QUEUE_SIZE=5
-CONFIG_ZMK_SPLIT_BLE_PERIPHERAL_STACK_SIZE=650
-CONFIG_ZMK_SPLIT_BLE_PERIPHERAL_PRIORITY=5
-CONFIG_ZMK_SPLIT_BLE_PERIPHERAL_POSITION_QUEUE_SIZE=10
-#End System Configuration
-
-
-#extras
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
-#https://github.com/nickconway/zmk/blob/dev/app/src/mouse/Kconfig
-CONFIG_ZMK_MOUSE=y #custom
-CONFIG_ZMK_MOUSE_TICK_DURATION=8
 
-#CONFIG_ZMK_MOUSE_WORK_QUEUE_SYSTEM=y
+CONFIG_ZMK_MOUSE=y
+CONFIG_ZMK_MOUSE_TICK_DURATION=1 #default is 8
 CONFIG_ZMK_MOUSE_WORK_QUEUE_DEDICATED=y
-
-CONFIG_ZMK_MOUSE_DEDICATED_THREAD_STACK_SIZE=2048
-CONFIG_ZMK_MOUSE_DEDICATED_THREAD_PRIORITY=3
-
