fixed formatting of rollow.conf

--- a/config/rollow.conf
+++ b/config/rollow.conf
@@ -3,13 +3,15 @@
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
-CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y #normally use CONFIG_ZMK_DISPLAY_WORK_QUEUE_SYSTEM
+#normally use CONFIG_ZMK_DISPLAY_WORK_QUEUE_SYSTEM
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y 
 
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
-CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0 #normally use the default of -1
-CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5 #normally use the default of -m
+#normally use the default of -1 for both
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0 
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5 
 
 CONFIG_ZMK_IDLE_TIMEOUT=10000
 CONFIG_ZMK_SLEEP=y
@@ -17,9 +19,11 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 CONFIG_ZMK_EXT_POWER=y
 
-CONFIG_ZMK_SETTINGS_SAVE_DEBOUNCE=5000 #normally use 60000
-CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y #normally use the below
+#normally use 60000
+CONFIG_ZMK_SETTINGS_SAVE_DEBOUNCE=5000
 
+#normally use the below
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
 #CONFIG_ZMK_HID_REPORT_TYPE_HKRO=y
 #CONFIG_ZMK_HID_KEYBOARD_REPORT_SIZE=10
 
@@ -29,5 +33,6 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 
 CONFIG_ZMK_MOUSE=y
-CONFIG_ZMK_MOUSE_TICK_DURATION=1 #default is 8
+#default is 8
+CONFIG_ZMK_MOUSE_TICK_DURATION=1
 CONFIG_ZMK_MOUSE_WORK_QUEUE_DEDICATED=y
