--- a/T4CORUN/config.dtsi
+++ b/T4CORUN/config.dtsi
@@ -46,7 +46,6 @@
 #define RALT_I  &hm_alt RALT    I
 #define RGUI_O	&hm_gui RGUI    O
 
-
 //Shortcuts
 #define S_UNDO  &kp LC(Z)
 #define S_CUT   &kp LC(X)
@@ -66,7 +65,35 @@
 #define BT3     &bt BT_SEL 3
 #define BT4     &bt BT_SEL 4
 
+//mouse tuning
+#define MOU_U	&mmv MOVE_VERT(-3000)
+#define MOU_D	&mmv MOVE_VERT(3000)
+#define MOU_L	&mmv MOVE_HOR(-3000)
+#define MOU_R	&mmv MOVE_HOR(3000)
+
 //Behavior Configuration
 #define TAPPING_TERM 200
 #define TAPPING_TERM_GUIALT 230
 #define TAPPING_TERM_PINKY 250
+
+&lt {
+    flavor = "tap-preferred";
+    tapping-term-ms = <TAPPING_TERM>;
+};
+
+&mt {
+    flavor = "tap-preferred";
+    tapping-term-ms = <TAPPING_TERM>;
+};
+
+&mmv {
+    delay-ms = <0>;
+    acceleration-exponent=<1>;
+    time-to-max-speed-ms = <500>;
+};
+
+&mwh {
+    delay-ms = <0>;
+    acceleration-exponent=<1>;
+    time-to-max-speed-ms = <0>;
+};
