--- a/T4CORUN/t4corun.dtsi
+++ b/T4CORUN/t4corun.dtsi
@@ -1,3 +1,8 @@
+#include "t4corun.h"
+#include <dt-bindings/zmk/keys.h>
+#include <dt-bindings/zmk/bt.h>
+#include <dt-bindings/zmk/outputs.h>
+
 / {
     behaviors {
         hm_gui: homerow_gui {
@@ -5,8 +10,8 @@
             label = "HOMEROW_GUI";
             #binding-cells = <2>;
             tapping-term-ms = <TAPPING_TERM_GUIALT>;
-            quick-tap-ms = <0>;
             flavor = "tap-preferred";
+			quick-tap-ms = <QUICK_TAP_TERM>;
             global-quick-tap;
             bindings = <&kp>, <&kp>;
         };
@@ -16,8 +21,8 @@
             label = "HOMEROW_ALT";
             #binding-cells = <2>;
             tapping-term-ms = <TAPPING_TERM_GUIALT>;
-            quick-tap-ms = <0>;
             flavor = "tap-preferred";
+			quick-tap-ms = <QUICK_TAP_TERM>;
             global-quick-tap;
             bindings = <&kp>, <&kp>;
         };
@@ -27,8 +32,8 @@
             label = "HOMEROW_CTRL";
             #binding-cells = <2>;
             tapping-term-ms = <TAPPING_TERM>;
-            quick-tap-ms = <0>;
-            flavor = "tap-preferred";
+			flavor = "tap-preferred";
+			quick-tap-ms = <QUICK_TAP_TERM>;
             global-quick-tap;
             bindings = <&kp>, <&kp>;
         };
@@ -38,8 +43,8 @@
             label = "HOMEROW_SHIFT";
             #binding-cells = <2>;
             tapping-term-ms = <TAPPING_TERM>;
-            quick-tap-ms = <0>;
             flavor = "tap-preferred";
+			quick-tap-ms = <QUICK_TAP_TERM>;
             global-quick-tap;
             bindings = <&kp>, <&kp>;
         };
@@ -53,4 +58,14 @@
             bindings = <&kp>, <&kp>;
         };
     };
+};
+
+&lt {
+    flavor = "tap-preferred";
+    tapping-term-ms = <TAPPING_TERM>;
+};
+
+&mt {
+    flavor = "tap-preferred";
+    tapping-term-ms = <TAPPING_TERM>;
 };
