--- a/T4CORUN/t4corun.dtsi
+++ b/T4CORUN/t4corun.dtsi
@@ -1,64 +1,14 @@
-#include "t4corun.h"
+#include <behaviors.dtsi>
+
+#include "../T4CORUN/homerowmods.dtsi"
+#include "../T4CORUN/macros.dtsi"
+#include "../T4CORUN/mouse.dtsi"
+#include "../T4CORUN/tapdances.dtsi"
+
 #include <dt-bindings/zmk/keys.h>
 #include <dt-bindings/zmk/bt.h>
 #include <dt-bindings/zmk/outputs.h>
-
-/ {
-    behaviors {
-        hm_gui: homerow_gui {
-            compatible = "zmk,behavior-hold-tap";
-            label = "HOMEROW_GUI";
-            #binding-cells = <2>;
-            tapping-term-ms = <TAPPING_TERM_GUIALT>;
-            flavor = "tap-preferred";
-			quick-tap-ms = <QUICK_TAP_TERM>;
-            global-quick-tap;
-            bindings = <&kp>, <&kp>;
-        };
-
-        hm_alt: homerow_alt {
-            compatible = "zmk,behavior-hold-tap";
-            label = "HOMEROW_ALT";
-            #binding-cells = <2>;
-            tapping-term-ms = <TAPPING_TERM_GUIALT>;
-            flavor = "tap-preferred";
-			quick-tap-ms = <QUICK_TAP_TERM>;
-            global-quick-tap;
-            bindings = <&kp>, <&kp>;
-        };
-
-        hm_ctl: homerow_ctrl {
-            compatible = "zmk,behavior-hold-tap";
-            label = "HOMEROW_CTRL";
-            #binding-cells = <2>;
-            tapping-term-ms = <TAPPING_TERM>;
-			flavor = "tap-preferred";
-			quick-tap-ms = <QUICK_TAP_TERM>;
-            global-quick-tap;
-            bindings = <&kp>, <&kp>;
-        };
-
-        hm_sft: homerow_shift {
-            compatible = "zmk,behavior-hold-tap";
-            label = "HOMEROW_SHIFT";
-            #binding-cells = <2>;
-            tapping-term-ms = <TAPPING_TERM>;
-            flavor = "tap-preferred";
-			quick-tap-ms = <QUICK_TAP_TERM>;
-            global-quick-tap;
-            bindings = <&kp>, <&kp>;
-        };
-
-		lt_pky: layertap_pinky {
-            compatible = "zmk,behavior-hold-tap";
-            label = "LAYERTAP_PINKY";
-            #binding-cells = <2>;
-            tapping-term-ms = <TAPPING_TERM_PINKY>;
-            flavor = "tap-preferred";
-            bindings = <&kp>, <&kp>;
-        };
-    };
-};
+#include "t4corun.h"
 
 &lt {
     flavor = "tap-preferred";
