--- a/T4CORUN/t4corun.dtsi
+++ b/T4CORUN/t4corun.dtsi
@@ -10,6 +10,19 @@
 #include <dt-bindings/zmk/outputs.h>
 #include "t4corun.h"
 
+/ {
+    behaviors {
+		lt_pky: layertap_pinky {
+            compatible = "zmk,behavior-hold-tap";
+            label = "LAYERTAP_PINKY";
+            #binding-cells = <2>;
+            tapping-term-ms = <TAPPING_TERM_PINKY>;
+            flavor = "tap-preferred";
+            bindings = <&kp>, <&kp>;
+        };
+    };
+};
+
 &lt {
     flavor = "tap-preferred";
     tapping-term-ms = <TAPPING_TERM>;
