--- a/T4CORUN/homerowmods.dtsi
+++ b/T4CORUN/homerowmods.dtsi
@@ -45,5 +45,14 @@
             global-quick-tap;
             bindings = <&kp>, <&kp>;
         };
+
+		lt_pky: layertap_pinky {
+            compatible = "zmk,behavior-hold-tap";
+            label = "LAYERTAP_PINKY";
+            #binding-cells = <2>;
+            tapping-term-ms = <TAPPING_TERM_PINKY>;
+            flavor = "tap-preferred";
+            bindings = <&kp>, <&kp>;
+        };
     };
 };
