--- a/T4CORUN/t4corun.dtsi
+++ b/T4CORUN/t4corun.dtsi
@@ -20,7 +20,7 @@
             #binding-cells = <2>;
             tapping-term-ms = <TAPPING_TERM_PINKY>;
             flavor = "tap-preferred";
-            bindings = <&kp>, <&kp>;
+            bindings = <&mo>, <&kp>;
         };
     };
 };
