--- a/config/rollow.conf
+++ b/config/rollow.conf
@@ -33,6 +33,7 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 
 CONFIG_ZMK_MOUSE=y
-#default is 8
-CONFIG_ZMK_MOUSE_TICK_DURATION=8
+
+#This needs to stay 8 for the encoders to work
+CONFIG_ZMK_MOUSE_TICK_DURATION=4
 CONFIG_ZMK_MOUSE_WORK_QUEUE_DEDICATED=y
